# AditusAI

./: .env.example  .gitignore  README.md  config.py  enums.py  exceptions.py  main.py  pyproject.toml
api/routes/: candidate.py  jobs.py
core/: config.py  queue.py  worker.py
database/: base.py  session.py
enums/: __init__.py  types.py
models/: candidate.py  candidate_profile.py  experience.py  language.py  qualification.py  skill.py
models/candidate/: __init__.py  experience.py  language.py  profile.py  qualification.py  seniority.py  skill.py
models/job/: __init__.py  candidate_job_match.py  job_postings.py
schemas/: candidate.py  experience.py  geo.py  language.py  pdf.py  qualification.py  query.py  responses.py  skill.py
schemas/candidate/: __init__.py  experience.py  language.py  profile.py  qualification.py  seniority.py  skill.py
services/: candidate_service.py  llm_service.py  n8n_service.py
tasks/: candidate.py  jobs.py
tests/: test_db.py
utils/: geo_utils.py  pdf_utils.py
