[project]
name = "aditusai"
version = "0.1.0"
description = "A personal career intelligence platform that monitors job opportunities, industry trends, and learning resources, and delivers tailored insights to help you grow and land the right role."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "instructor>=1.14.5",
    "litellm>=1.82.3",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.9.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "rq>=2.7.0",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]
